--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@ function initDifficultyButtons() {
 initDifficultyButtons();
 
 document.getElementById('startButton').addEventListener('click', function() {
+    showGlobalSpinner();
     localStorage.setItem('difficulty', selectedDifficulty);
     document.body.classList.add('fade-out');
     setTimeout(() => {
@@ -177,6 +178,25 @@ document.addEventListener('DOMContentLoaded', function() {
     document.getElementById('languageText').textContent = currentLang.toUpperCase();
     updateTexts();
 });
+
+// Global loading spinner
+function showGlobalSpinner() {
+    const spinner = document.getElementById('globalSpinner');
+    if (spinner) spinner.style.display = 'flex';
+}
+window.addEventListener('beforeunload', () => {
+    showGlobalSpinner();
+});
 </script>
+
+<!-- Global Spinner Overlay -->
+<div id="globalSpinner" style="display:none; position:fixed; inset:0; z-index:99999; background: rgba(255,255,255,0.7);" class="dark:bg-black/50 flex items-center justify-center">
+  <div class="w-12 h-12 rounded-full border-4 border-primary border-t-transparent animate-spin"></div>
+  <style>
+    @media (prefers-color-scheme: dark) {
+      #globalSpinner { background: rgba(16,27,34,0.5); }
+    }
+  </style>
+</div>
 </body></html>
 
