--- a/game.html
+++ b/game.html
@@ -209,13 +209,13 @@
 </div>
 </main>
 <!-- Score Display -->
-<div class="flex items-center justify-center gap-4 px-4 py-2 bg-transparent">
-<h2 class="text-text-light-primary dark:text-text-dark-primary text-xl font-bold leading-tight tracking-[-0.015em]"><span id="gameScore">Skor</span>: <span id="scoreDisplay">0</span></h2>
-<div id="streakContainer" class="flex items-center gap-2 hidden">
+<div class="flex items-center justify-center gap-3 md:gap-4 px-4 py-2 bg-transparent">
+<h2 class="text-text-light-primary dark:text-text-dark-primary text-base md:text-xl font-bold leading-tight tracking-[-0.015em] whitespace-nowrap"><span id="gameScore">Skor</span>: <span id="scoreDisplay">0</span></h2>
+<div id="streakContainer" class="flex items-center gap-2 hidden whitespace-nowrap">
 <span class="material-symbols-outlined text-2xl text-orange-500 animate-pulse">local_fire_department</span>
 <h3 class="text-orange-500 text-lg font-bold leading-tight"><span id="streakDisplay">0</span></h3>
 </div>
-<h3 class="text-text-light-secondary dark:text-text-dark-secondary text-lg font-semibold leading-tight"><span id="highScoreLabel">Rekor</span>: <span id="highScoreDisplay">0</span></h3>
+<h3 class="text-text-light-secondary dark:text-text-dark-secondary text-base md:text-lg font-semibold leading-tight whitespace-nowrap"><span id="highScoreLabel">Rekor</span>: <span id="highScoreDisplay">0</span></h3>
 <div id="livesContainer" class="flex items-center gap-1 ml-2" aria-label="lives">
 <span class="material-symbols-outlined text-red-500">favorite</span>
 <span class="material-symbols-outlined text-red-500">favorite</span>
