--- a/game.html
+++ b/game.html
@@ -154,13 +154,15 @@
 <!-- First Tweet Card (Visible Stats) -->
 <div id="topTweetCard" class="tweet-card flex flex-col items-stretch rounded-lg bg-white dark:bg-background-dark shadow-sm" style="flex: 1 1 auto;">
 <div class="tweet-content-scrollable flex flex-col px-4 pt-2">
-<div class="flex flex-col items-center justify-center flex-1 gap-3 text-center min-h-0">
+<div class="flex flex-col items-center gap-3 mb-4 shrink-0">
 <div class="w-12 h-12 shrink-0 bg-center bg-no-repeat bg-cover rounded-full" data-alt="Profile avatar" id="topTweetAvatar" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCCH7NLLq50a3h1sC0XnEmhTBWJAJpGirdSRRvf_NOSHsMihYK5VBovRmYsgiAqURCkWB33bWBr5ss3-bU50B1H4tBr20ydYXe85_hq0vwqLMC5gywjU7Q6F5QFTW5Hcv9fHb3YiXIy-nFlm0BW64KYHkMnd-LTD9DZ1m7D-y4Q-NLmUcXSOkxhJTO5SGkKWLdsmbsKbAQLlcqrHDPu1pYcQZVsPYvW0AdGkLWyAxIisqz6jluCgyCn2Ono85GMXY342o4PvNXoyEc");'></div>
 <div class="flex items-center gap-1">
 <p class="text-text-light-primary dark:text-text-dark-primary text-sm md:text-base font-bold leading-tight" id="topTweetName">Real User One</p>
 <p class="text-text-light-secondary dark:text-text-dark-secondary text-xs md:text-sm font-normal leading-normal" id="topTweetUsername">@realuserone</p>
 </div>
-<p class="text-text-light-primary dark:text-text-dark-primary text-sm md:text-base font-normal leading-normal mt-1" id="topTweetText">This is a tweet that everyone can see the stats for. It's a great example of a viral tweet. Hard to beat this one!</p>
+</div>
+<div class="flex flex-1 items-center justify-center text-center min-h-0 px-2">
+<p class="text-text-light-primary dark:text-text-dark-primary text-sm md:text-base font-normal leading-normal" id="topTweetText">This is a tweet that everyone can see the stats for. It's a great example of a viral tweet. Hard to beat this one!</p>
 </div>
 </div>
 <div class="flex items-center justify-center gap-6 text-text-light-secondary dark:text-text-dark-secondary px-4 py-1 flex-shrink-0">
@@ -186,13 +188,15 @@
 <!-- Second Tweet Card (Hidden Stats) -->
 <div id="bottomTweetCard" class="tweet-card flex flex-col items-stretch rounded-lg bg-white dark:bg-background-dark shadow-sm" style="flex: 1 1 auto;">
 <div class="tweet-content-scrollable flex flex-col px-4 pt-2">
-<div class="flex flex-col items-center justify-center flex-1 gap-3 text-center min-h-0">
+<div class="flex flex-col items-center gap-3 mb-4 shrink-0">
 <div class="w-12 h-12 shrink-0 bg-center bg-no-repeat bg-cover rounded-full" data-alt="Profile avatar" id="bottomTweetAvatar" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC1u-SXQ4aAVmmO2R9BT-CkLFmKlp5wLuBkg0zb784o8y32zLKYGG1rgSyw7_rJZc7ygxcluRqOKo9gvVzI8H5zJ4nYTnqJR1HdDhhoSoA3naeVeWsO8m-PE6s4zIjGx4wXzcMfPtY5pQr-VGD1b47n16XD3-a7Sy2iNyNyu3ldP-5Eo6gn_EPM75dyHZZHnSPUvaq5vQZibPBa14B3wFXxwpiE2je_4FB6FkLGsG_h2PFEkJvQBYBpqP8orOE7nLGnBEUIPVnA9_M");'></div>
 <div class="flex items-center gap-1">
 <p class="text-text-light-primary dark:text-text-dark-primary text-sm md:text-base font-bold leading-tight" id="bottomTweetName">Another User</p>
 <p class="text-text-light-secondary dark:text-text-dark-secondary text-xs md:text-sm font-normal leading-normal" id="bottomTweetUsername">@anotheruser</p>
 </div>
-<p class="text-text-light-primary dark:text-text-dark-primary text-sm md:text-base font-normal leading-normal mt-1" id="bottomTweetText">This is the second tweet, and the user has to guess if its stats are higher or lower than the first one. What do you think?</p>
+</div>
+<div class="flex flex-1 items-center justify-center text-center min-h-0 px-2">
+<p class="text-text-light-primary dark:text-text-dark-primary text-sm md:text-base font-normal leading-normal" id="bottomTweetText">This is the second tweet, and the user has to guess if its stats are higher or lower than the first one. What do you think?</p>
 </div>
 </div>
 <div class="flex items-center justify-center gap-6 text-text-light-secondary dark:text-text-dark-secondary px-4 py-1 flex-shrink-0" id="bottomTweetStatsContainer">
