--- a/game.html
+++ b/game.html
@@ -498,6 +498,9 @@ function getRandomUnusedTweet() {
     return tweet;
 }
 
+// Profil resmi gelmezse gösterilecek varsayılan (gri daire)
+var DEFAULT_AVATAR = "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 48 48'%3E%3Ccircle fill='%239ca3af' cx='24' cy='24' r='24'/%3E%3Cpath fill='%236b7280' d='M24 24c4.4 0 8-3.6 8-8s-3.6-8-8-8-8 3.6-8 8 3.6 8 8 8zm0 4c-5.3 0-16 2.7-16 8v4h32v-4c0-5.3-10.7-8-16-8z'/%3E%3C/svg%3E";
+
 // Tweet'i DOM'a yazdır
 function renderTweet(tweet, isTop = false) {
     const prefix = isTop ? 'top' : 'bottom';
@@ -511,7 +514,16 @@ function renderTweet(tweet, isTop = false) {
     if (nameEl) nameEl.textContent = tweet.name;
     if (usernameEl) usernameEl.textContent = tweet.username;
     if (textEl) textEl.textContent = tweet.text;
-    if (avatarEl) avatarEl.style.backgroundImage = `url("${tweet.avatar}")`;
+    if (avatarEl) {
+        avatarEl.style.backgroundImage = `url("${DEFAULT_AVATAR}")`;
+        var avatarUrl = (tweet.avatar && tweet.avatar.trim()) ? tweet.avatar : null;
+        if (avatarUrl) {
+            var img = new Image();
+            img.onload = function() { avatarEl.style.backgroundImage = 'url("' + avatarUrl + '")'; };
+            img.onerror = function() { avatarEl.style.backgroundImage = 'url("' + DEFAULT_AVATAR + '")'; };
+            img.src = avatarUrl;
+        }
+    }
     
     if (isTop) {
         // Üst tweet için istatistikleri göster
